# walledeval

./: .gitignore  404.html  CI.sh  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  tox.ini
.github/workflows/: docs.yml
bastion/: __init__.py  __main__.py  benchmark.py  eval.py  guard.py  judge.py  llm.py
components/dataset/: index.html
components/judges/: index.html
components/llm/: index.html
components/templates/: index.html
docs/: index.md  installation.md  quickstart.md  requirements.txt
docs/components/: dataset.md  llm.md  templates.md
docs/llm/: huggingface.md  index.md  input_types.md  llm_types.md  other_api.md  supporting_your_own.md
docs/quickstart/: auto-red-teaming.md  index.md  judges.md  mcq.md  prompts.md  templates.md
docs/setup/: installation.md
docs/stylesheets/: style.css
examples/: pipeline.py
experiments/: Aggregate Experimental Results.ipynb  judge_benchmarks.py  mutation_benchmarks.py  mutation_generation.py  prompt_benchmarks.py  refusal_benchmarks.py  template_benchmarks.py
experiments/scripts/: run_catqa.sh  run_judge.sh  run_llama2_7b.sh  run_llama_refusal.sh  run_mistral.sh  run_mutation_benchmark.sh  run_mutations.sh  run_qwen_phi_gemma.sh  run_qwen_yi.sh
installation/: index.html
llm/: index.html
llm/huggingface/: index.html
llm/input_types/: index.html
llm/llm_types/: index.html
llm/other_api/: index.html
llm/supporting_your_own/: index.html
notebooks/: Dataset Testing.ipynb  Loading Taxonomy.ipynb  MLCommons AI Safety v0.5 Taxonomy.json  Process Datasets.ipynb  Prompt Template Tests.ipynb  Tutorial.ipynb
quickstart/: index.html
quickstart/auto-red-teaming/: index.html
quickstart/judges/: index.html
quickstart/mcq/: index.html
quickstart/prompts/: index.html
quickstart/refusal/: index.html
quickstart/templates/: index.html
search/: search_index.json
setup/installation/: index.html
stylesheets/: style.css
tests/: eval.py  pipeline.py  test_benchmark.py  test_hf_llm.py  test_judge.py  test_llm.py  test_prompts.py
tutorials/: Pipeline Tutorial.ipynb
tutorials/judges/: CodeShield Tutorial.ipynb  LionGuard Tutorial.ipynb  LlamaGuard Tutorial.ipynb  MCQ Judge Tutorial.ipynb  String-Matching Judge Tutorial.ipynb  ToxicityModel Tutorial.ipynb
tutorials/llm/: Llama CPP Tutorial.ipynb
walledeval/: __init__.py  __main__.py  benchmark.py  judge.py  llm.py  pipeline.py  tester.py
walledeval/attacks/: __init__.py  core.py  gcg.py  gcg_utils.py  mutators.py  pair.py  wildteaming.py
walledeval/benchmark/: __init__.py  core.py
walledeval/cli/: __init__.py  __main__.py
walledeval/constants/: __init__.py
walledeval/data/: __init__.py  core.py
walledeval/dtypes/: __init__.py  llm.py  (+2 more)
(+507 files in other folders)
