[tool.poetry]
name = "walledeval"
version = "0.1.0"
description = "An open-source toolkit to test LLMs against jailbreaks and unprecedented harms."
license = "MIT"
authors = ["Rishabh Bhardwaj", "Prannaya Gupta <prannayagupta@programmer.net>"]
readme = "README.md"
repository = "https://github.com/walledai/walledeval"
keywords = ["NLP", "deep learning", "transformer", "language model", "jailbreaking", "red-teaming"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/walledai/walledeval/issues"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.23.6"
anthropic = "^0.25.6"
google-generativeai = "^0.5.2"
transformers = "^4.40.1"
datasets = "^2.19.0"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
accelerate = "^0.31.0"
xgboost = "^2.1.0"
scikit-learn = "^1.5.0"
codeshield = "^1.0.1"
numpy = "<2"
llama-cpp-python = "^0.2.81"
together = "^1.2.1"
cohere = "^5.5.8"
groq = "^0.9.0"
onnxruntime = "^1.18.1"

[tool.poetry.group.dev.dependencies]  
pytest = "^7.4"  
pytest-sugar = "*"  
pytest-cov = "*"  
black = "*"  
mypy = "*"  
ruff = "*"  
isort = "*" 
tox = "^4.15.0"
types-tqdm = "^4.66.0.20240417"
torch = "^2.3.0"
lxml = "^5.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

